==> AhmedShawada/PIC18F4620-Drivers/MCAL_Layer/USART/hal_usart.c <==
#include "hal_usart.h"

std_ReturnType EUSART_ASYNC_Init(const usart_t *_eusart)
{
    std_ReturnType ret = E_NOT_OK;
    
    if(NULL == _eusart)
    {
        ret = E_NOT_OK;
    }
    else
    {
        /* Disable EUSART Module */
        RCSTAbits.SPEN = EUSART_MODULE_DISABLE;
        /* RX : Input Configuration as needed */
        RX_Input_Configuration(); 
        /* TX : Input Configuration as needed */
        TX_Input_Configuration();
        /* Calculation EUSART Baud Rate */
        EUSART_Baud_Rate_Calculation(_eusart);
        /* initialize TX */
        EUSART_ASYNC_TX_Init(_eusart);
        /* initialize RX */
        EUSART_ASYNC_RX_Init(_eusart);
        /* Enable EUSART Module */
        RCSTAbits.SPEN = EUSART_MODULE_ENABLE;
        
        ret = E_OK;
    }
    return ret;
}

std_ReturnType EUSART_ASYNC_DeInit(const usart_t *_eusart)
{
    std_ReturnType ret = E_NOT_OK;
    
    if(NULL == _eusart)
    {
        ret = E_NOT_OK;
    }
    else
    {
        /* Disable EUSART Module */
        RCSTAbits.SPEN = EUSART_MODULE_DISABLE;
        ret = E_OK;
    }
    return ret;
    
}

std_ReturnType EUSART_ASYNC_ReadByteBlocking(uint8 *_data)
{
    std_ReturnType ret = E_NOT_OK;
    if(NULL == _data)
    {
        ret = E_NOT_OK;
    }
    
    else
    {
        while(!PIR1bits.RCIF);
        *_data = RCREG;
        
        ret = E_OK;
    }

    return ret;
}

std_ReturnType EUSART_ASYNC_ReadByteNonBlocking(uint8 *_data)
{
    std_ReturnType ret = E_NOT_OK;
    
    if(NULL == _data)
    {
        ret = E_NOT_OK;
    }
    
    else
    {
        if(1 == PIR1bits.RCIF)
        {
            *_data = RCREG;
             ret = E_OK;
        } 
        else
        {
            ret = E_NOT_OK;
        }
    }
    return ret;
}

std_ReturnType EUSART_ASYNC_WriteByteBlocking(uint8 _data)
{
    std_ReturnType ret = E_OK;
    
    while(!TXSTAbits.TRMT);
#if EUSART_TX_INTERRUPT_FEATURE_ENABLE==INTERRUPT_FEATURE_ENABLE
    EUSART_TX_InterruptEnable();
#endif
    TXREG = _data;
        
    return ret;
}

std_ReturnType EUSART_ASYNC_WriteStringBlocking(uint8 *_data, uint16 str_len)
{
    std_ReturnType ret = E_NOT_OK;
    if(NULL == _data)
    {
        ret = E_NOT_OK;
    }
    
    else
    {
        uint16 Char_Counter = ZERO_INIT;
        
        for(Char_Counter = ZERO_INIT ;Char_Counter < str_len ;Char_Counter++)
        {
            ret = EUSART_ASYNC_WriteByteBlocking(_data[Char_Counter]);
        }
        ret = E_OK;
    }
    return ret;
}

std_ReturnType EUSART_ASYNC_WriteByteNonBlocking(uint8 _data)
{
    std_ReturnType ret = E_NOT_OK;
    
    if(1 == TXSTAbits.TRMT)
    {
   
#if EUSART_TX_INTERRUPT_FEATURE_ENABLE==INTERRUPT_FEATURE_ENABLE
        EUSART_TX_InterruptEnable();
#endif
        
        TXREG = _data;
        ret = E_OK;
    }
    
    else
    {
        ret = E_NOT_OK;
    }
        
    return ret;
}

std_ReturnType EUSART_ASYNC_WriteStringNonBlocking(uint8 *_data, uint16 str_len)
{
    std_ReturnType ret = E_NOT_OK;
    if(NULL == _data)
    {
        ret = E_NOT_OK;
    }
    
    else
    {
        uint16 Char_Counter = ZERO_INIT;
        
        for(Char_Counter = ZERO_INIT ;Char_Counter < str_len ;Char_Counter++)
        {
            
            ret = EUSART_ASYNC_WriteByteNonBlocking(_data[Char_Counter]);
            __delay_ms(2);
        }
        
        ret = E_OK;
    }
    return ret;
}

static void EUSART_Baud_Rate_Calculation(const usart_t *_eusart)
{
    float Baud_Rate_Temp = ZERO_INIT;
    switch(_eusart->baudrate_gen_gonfig)
    {
        case BAUDRATE_ASYN_8BIT_lOW_SPEED :
            TXSTAbits.SYNC = EUSART_ASYNCHRONOUS_MODE;
            TXSTAbits.BRGH = EUSART_ASYNCHRONOUS_LOW_SPEED;
            BAUDCONbits.BRG16 = EUSART_08BIT_BAUDRATE_GEN;
            Baud_Rate_Temp = ((_XTAL_FREQ / (float)_eusart->baudrate) / 64) - 1;
            break;
            
        case BAUDRATE_ASYN_8BIT_HIGH_SPEED :
            TXSTAbits.SYNC = EUSART_ASYNCHRONOUS_MODE;
            TXSTAbits.BRGH = EUSART_ASYNCHRONOUS_HIGH_SPEED;
            BAUDCONbits.BRG16 = EUSART_08BIT_BAUDRATE_GEN;
            Baud_Rate_Temp = ((_XTAL_FREQ / (float)_eusart->baudrate) / 16) - 1;
            break; 
            
        case BAUDRATE_ASYN_16BIT_LOW_SPEED :
            TXSTAbits.SYNC = EUSART_ASYNCHRONOUS_MODE;
            TXSTAbits.BRGH = EUSART_ASYNCHRONOUS_LOW_SPEED;
            BAUDCONbits.BRG16 = EUSART_16BIT_BAUDRATE_GEN;
            Baud_Rate_Temp = ((_XTAL_FREQ / (float)_eusart->baudrate) / 16) - 1;
            break;
            
        case BAUDRATE_ASYN_16BIT_HIGH_SPEED :
            TXSTAbits.SYNC = EUSART_ASYNCHRONOUS_MODE;
            TXSTAbits.BRGH = EUSART_ASYNCHRONOUS_HIGH_SPEED;
            BAUDCONbits.BRG16 = EUSART_16BIT_BAUDRATE_GEN;
            Baud_Rate_Temp = ((_XTAL_FREQ / (float)_eusart->baudrate) / 4) - 1;
            break;
            
            
        case BAUDRATE_SYN_8BIT :
            TXSTAbits.SYNC = EUSART_SYNCHRONOUS_MODE;
            BAUDCONbits.BRG16 = EUSART_08BIT_BAUDRATE_GEN;
            Baud_Rate_Temp = ((_XTAL_FREQ / (float)_eusart->baudrate) / 4) - 1;
            break; 
            
        case BAUDRATE_SYN_16BIT :
            TXSTAbits.SYNC = EUSART_SYNCHRONOUS_MODE;
            BAUDCONbits.BRG16 = EUSART_16BIT_BAUDRATE_GEN;
            Baud_Rate_Temp = ((_XTAL_FREQ / (float)_eusart->baudrate) / 4) - 1;
            break;
            
            default : ;
    }
    
    SPBRG  = (uint8)((uint32)Baud_Rate_Temp);
    SPBRGH = (uint8)(((uint32)Baud_Rate_Temp) >> 8 );
}

static void EUSART_ASYNC_TX_Init(const usart_t *_eusart)
{
    if(EUSART_ASYNCHRONOUS_TX_ENABLE == _eusart->usart_tx_cfg.usart_tx_enable)
    {
        /* Enable EUSART Transmit */
        TXSTAbits.TXEN = EUSART_ASYNCHRONOUS_TX_ENABLE;
         EUSART_TxInterruptHandler = _eusart->EUSART_TxDefaultInterruptHandler;
        
        /* EUSART Transmit Interrupt Configuration */
        if(EUSART_ASYNCHRONOUS_INTERRUPT_TX_ENABLE == _eusart->usart_tx_cfg.usart_tx_interrupt_enable)
        {
            PIE1bits.TXIE = EUSART_ASYNCHRONOUS_INTERRUPT_TX_ENABLE;
            
            /* Interrupt Configurations */
#if EUSART_TX_INTERRUPT_FEATURE_ENABLE == INTERRUPT_FEATURE_ENABLE
            EUSART_TX_InterruptEnable();
            /* Interrupt Priority Configurations */
#if INTERRUPT_PRIORITY_LEVELS_ENABLE == INTERRUPT_FEATURE_ENABLE
            INTERRUPT_PriorityLevelsEnable();
            if(INTERRUPT_HIGH_PRIORITY == _eusart->usart_tx_cfg.usart_tx_int_priority)
            {
                /* Enables all high-priority interrupts */
                
                INTERRUPT_GlobalInterruptHighEnable();
                EUSART_TX_HighPrioritySet();
            }
            else if(INTERRUPT_LOW_PRIORITY == _eusart->usart_tx_cfg.usart_tx_int_priority)
            {
                /* Enables all Low-priority interrupts */
                
                INTERRUPT_GlobalInterruptLowEnable();
                EUSART_TX_LowPrioritySet();
            }
            else{ /* Nothing */ }
#else
         INTERRUPT_GlobalInterruptEnable();
         INTERRUPT_PeripheralInterruptEnable();           
#endif 
#endif
        }
        
        
        else if(EUSART_ASYNCHRONOUS_INTERRUPT_TX_DISABLE == _eusart->usart_tx_cfg.usart_tx_interrupt_enable)
        {
            PIE1bits.TXIE = EUSART_ASYNCHRONOUS_INTERRUPT_TX_DISABLE;
        }
        else{ /* NOThing */ }
        
        
        /* EUSART  9-Bit Transmit Configuration */
        if(EUSART_ASYNCHRONOUS_9Bit_TX_ENABLE == _eusart->usart_tx_cfg.usart_tx_9bit_enable)
        {
            TXSTAbits.TX9 = EUSART_ASYNCHRONOUS_9Bit_TX_ENABLE;
        }
        else if(EUSART_ASYNCHRONOUS_9Bit_TX_DISABLE == _eusart->usart_tx_cfg.usart_tx_9bit_enable)
        {
            TXSTAbits.TX9 = EUSART_ASYNCHRONOUS_9Bit_TX_DISABLE;
        }
        else{ /* NOThing */ }
        
    }
    else{ /* NOThing */ }
    
}

static void EUSART_ASYNC_RX_Init(const usart_t *_eusart)
{
    if(EUSART_ASYNCHRONOUS_RX_ENABLE == _eusart->usart_rx_cfg.usart_rx_enable)
    {
        /* Enable EUSART Receiver */
        RCSTAbits.CREN = EUSART_ASYNCHRONOUS_RX_ENABLE;
        EUSART_RxInterruptHandler  = _eusart->EUSART_RxDefaultInterruptHandler;
        EUSART_FramingErrorHandler = _eusart->EUSART_FramingErrorHandler;
        EUSART_OverrunErrorHandler = _eusart->EUSART_OverrunErrorHandler;
        
        /* EUSART Receiver Interrupt Configuration */
        if(EUSART_ASYNCHRONOUS_INTERRUPT_RX_ENABLE == _eusart->usart_rx_cfg.usart_rx_interrupt_enable)
        {
            PIE1bits.RCIE = EUSART_ASYNCHRONOUS_INTERRUPT_RX_ENABLE;
            
            /* Interrupt Configurations */
#if EUSART_RX_INTERRUPT_FEATURE_ENABLE == INTERRUPT_FEATURE_ENABLE
            EUSART_RX_InterruptEnable();
            /* Interrupt Priority Configurations */
#if INTERRUPT_PRIORITY_LEVELS_ENABLE == INTERRUPT_FEATURE_ENABLE
            INTERRUPT_PriorityLevelsEnable();
            
            if(INTERRUPT_HIGH_PRIORITY == _eusart->usart_rx_cfg.usart_rx_int_priority)
            {
                /* Enables all high-priority interrupts */
                
                INTERRUPT_GlobalInterruptHighEnable();
                EUSART_RX_HighPrioritySet();
            }
            
            else if(INTERRUPT_LOW_PRIORITY == _eusart->usart_rx_cfg.usart_rx_int_priority)
            {
                /* Enables all Low-priority interrupts */
                
                INTERRUPT_GlobalInterruptLowEnable();
                EUSART_RX_LowPrioritySet();
            }
            else{ /* Nothing */ }
#else
         INTERRUPT_GlobalInterruptEnable();
         INTERRUPT_PeripheralInterruptEnable();           
#endif 
#endif
        }
        
        
        else if(EUSART_ASYNCHRONOUS_INTERRUPT_RX_DISABLE == _eusart->usart_rx_cfg.usart_rx_interrupt_enable)
        {
            PIE1bits.RCIE = EUSART_ASYNCHRONOUS_INTERRUPT_RX_DISABLE;
        }
        else{ /* NOThing */ }
        
        
        /* EUSART  9-Bit Transmit Configuration */
        if(EUSART_ASYNCHRONOUS_9Bit_RX_ENABLE == _eusart->usart_rx_cfg.usart_rx_9bit_enable)
        {
            RCSTAbits.RX9 = EUSART_ASYNCHRONOUS_9Bit_RX_ENABLE;
        }
        else if(EUSART_ASYNCHRONOUS_9Bit_RX_DISABLE == _eusart->usart_rx_cfg.usart_rx_9bit_enable)
        {
            RCSTAbits.RX9 = EUSART_ASYNCHRONOUS_9Bit_RX_DISABLE;
        }
        else{ /* NOThing */ }
        
    }
    else{ /* NOThing */ }
    
}
