==> ayman4105/Atmega32-Drivers/AVR/MCAL_Layer/USART/hal_usart.c <==
#include "hal_usart.h"

Std_ReturnType EUSART_ASYNC_Init(const usart_t *_eusart)
{
	
	Std_ReturnType ret = E_OK;
	
	if (NULL == _eusart)
	{
		ret = E_NOT_OK;
	} 
	
	else
	{
		
		/* Calculation EUSART Baud Rate */
		//EUSART_Baud_Rate_Calculation(_eusart);
		
		UBRRL=51;
		UBRRH = 0;
	
		/* initialize TX */
		EUSART_ASYNC_TX_Init(_eusart);
		/* initialize RX */
		EUSART_ASYNC_RX_Init(_eusart);
		
		ret = E_OK;
		
	}
	return ret; 
	
}

Std_ReturnType EUSART_ASYNC_DeInit(const usart_t *_eusart)
{
	Std_ReturnType ret = E_OK;
	
	if (NULL == _eusart)
	{
		ret = E_NOT_OK;
	}
	
	else
	{
		EUSART_DISABLE_TX();
		EUSART_DISABLE_RX();
		ret = E_OK;
	}
	return ret;
	
}

Std_ReturnType EUSART_ASYNC_ReadByteBlocking(uint8 *_data)
{
	Std_ReturnType ret = E_OK;
	
	if (NULL == _data)
	{
		ret = E_NOT_OK;
	}
	
	else
	{
		/* Wait for data to be received */
		while (!RECIVER_DATA_STATUS());
		
		*_data =  UDR;
		
		ret = E_OK;
		
	}
	return ret;
}

Std_ReturnType EUSART_ASYNC_ReadByteNonBlocking(uint8 *_data)
{
	Std_ReturnType ret = E_OK;
	
	if (NULL == _data)
	{
		ret = E_NOT_OK;
	}
	
	else
	{
		if(1 == RECIVER_DATA_STATUS())
		{
			*_data = UDR;
			ret = E_OK;
		}
		
		else
		{
			ret = E_NOT_OK;
		}
	}
	return ret;
}

void EUSART_ASYNC_WriteByteBlocking(uint8 _data)
{
	while (!TRANSMIT_BUFFER_STATUS());
	
#if EUSART_TX_INTERRUPT_FEATURE_ENABLE == INTERRUPT_FEATURE_ENABLE
	EUSART_TX_InterruptEnable();
#endif

	UDR = _data;
}

Std_ReturnType EUSART_ASYNC_WriteStringBlocking(uint8 *_data, uint16 str_len)
{
	Std_ReturnType ret = E_OK;
	uint16 Index_Counter = ZERO_INIT;
	
	if (NULL == _data)
	{
		ret = E_NOT_OK;
	}
	
	else
	{	
		for(Index_Counter = ZERO_INIT; Index_Counter < str_len; Index_Counter++)
		{
			EUSART_ASYNC_WriteByteBlocking(_data[Index_Counter]);
		}
		ret = E_OK;
			
		//while( _data[Index_Counter] != ZERO_INIT )
		//{
			//ret = EUSART_ASYNC_WriteByteBlocking(_data[Index_Counter]);
			//Index_Counter++;
		//}			
	}
	return ret;
}

Std_ReturnType EUSART_ASYNC_WriteByteNonBlocking(uint8 _data)
{
	Std_ReturnType ret = E_NOT_OK;
	
	if(1 == TRANSMIT_BUFFER_STATUS())
	{
		
#if EUSART_TX_INTERRUPT_FEATURE_ENABLE==INTERRUPT_FEATURE_ENABLE
		EUSART_TX_InterruptEnable();
#endif
		
		UDR = _data;
		ret = E_OK;
	}
	
	else
	{
		ret = E_NOT_OK;
	}
	return ret;
}

Std_ReturnType EUSART_ASYNC_WriteStringNonBlocking(uint8 *_data, uint16 str_len)
{
	
	Std_ReturnType ret = E_OK;
	uint16 Index_Counter = ZERO_INIT;
	
	if (NULL == _data)
	{
		ret = E_NOT_OK;
	}
	
	else
	{
		for(Index_Counter = ZERO_INIT; Index_Counter < str_len; Index_Counter++)
		{	
			ret = EUSART_ASYNC_WriteByteNonBlocking(_data[Index_Counter]);
			_delay_ms(2);
		}
		ret = E_OK;	
	}
	return ret;
}

static void EUSART_Baud_Rate_Calculation(const usart_t *_eusart)
{
	float Baud_Rate_Temp = 0;
	
	switch(_eusart->baudrate_gen_gonfig)
	{
		case BAUDRATE_ASYN_NORMAL_MODE :
		CLEAR_BIT(UCSRA,U2X);
		EUSART_ASYNCHRONOUS_MODE_ENABLE();
		Baud_Rate_Temp = ((F_CPU / (float)_eusart->baudrate) / 16) - 1;
		break;
		
		case BAUDRATE_ASYN_DOUPLE_SPEED_MODE :
		SET_BIT(UCSRA,U2X);
		EUSART_ASYNCHRONOUS_MODE_ENABLE();
		Baud_Rate_Temp = ((F_CPU / (float)_eusart->baudrate) / 8) - 1;
		break;
		
		
		case BAUDRATE_SYN_MASTER_MODE :
		EUSART_SYNCHRONOUS_MODE_ENABLE();
		Baud_Rate_Temp = ((F_CPU / (float)_eusart->baudrate) / 2) - 1;
		break;
		
		default : ;
	}
	
	UBRRL  = (uint8)((uint32)Baud_Rate_Temp );
	UBRRH = (uint8)(((uint32)Baud_Rate_Temp) >> 8 );
	
}

static void EUSART_ASYNC_TX_Init(const usart_t *_eusart)
{
		/* Enable EUSART Transmit */
		EUSART_ENABLE_TX();
		EUSART_TxInterruptHandler = _eusart->EUSART_TxDefaultInterruptHandler;
		
		/* EUSART Transmit Interrupt Configuration */
		if(EUSART_INTERRUPT_TX_ENABLE == _eusart->usart_tx_cfg.usart_tx_interrupt_enable)
		{	
				
			/* Interrupt Configurations */
#if EUSART_TX_INTERRUPT_FEATURE_ENABLE == INTERRUPT_FEATURE_ENABLE
			EUSART_TX_InterruptEnable();
			INTERRUPT_GlobalInterruptEnable();
#endif	
		}
		else if(EUSART_INTERRUPT_TX_DISABLE == _eusart->usart_tx_cfg.usart_tx_interrupt_enable)
		{
			EUSART_TX_InterruptDisable();
		}
		else{ /* NOThing */ }

	
	
		/* EUSART  9-Bit Transmit Configuration */
		if(EUSART_9Bit_TX == _eusart->usart_tx_cfg.usart_tx_9bit_enable)
		{
			EUSART_CONFIG_9BIT();
		}
		else{ /* NOThing */ }
	

	
}

static void EUSART_ASYNC_RX_Init(const usart_t *_eusart)
{
	
		/* Enable EUSART Receiver */
		EUSART_ENABLE_RX();
		EUSART_RxInterruptHandler  = _eusart->EUSART_RxDefaultInterruptHandler;
		EUSART_FramingErrorHandler = _eusart->EUSART_FramingErrorHandler;
		EUSART_OverrunErrorHandler = _eusart->EUSART_OverrunErrorHandler;
	
		/* EUSART Receiver Interrupt Configuration */
		if(EUSART_INTERRUPT_RX_ENABLE == _eusart->usart_rx_cfg.usart_rx_interrupt_enable)
		{			
			/* Interrupt Configurations */
#if EUSART_RX_INTERRUPT_FEATURE_ENABLE == INTERRUPT_FEATURE_ENABLE
			EUSART_RX_InterruptEnable();
			INTERRUPT_GlobalInterruptEnable();
#endif
		}
		
		else if(EUSART_INTERRUPT_RX_DISABLE == _eusart->usart_rx_cfg.usart_rx_interrupt_enable)
		{
			EUSART_RX_InterruptDisable();
		}
		else{ /* NOThing */ }
	
	
	
		/* EUSART  9-Bit Receiver Configuration */
		if(EUSART_9Bit_RX == _eusart->usart_rx_cfg.usart_rx_9bit_enable)
		{
			EUSART_CONFIG_9BIT();
		}
		else{ /* NOThing */ }
	
	
}
